# cpp_skills

./: .gitignore
1_4/: main.cpp
module1/PR/: CMakeLists.txt  main.cpp
module1/video2/: README.md
module1/video3/: CMakeLists.txt
module10/video1/: CMakeLists.txt
module10/video1/src/: cpp2py.cpp
module10/video2/: CMakeLists.txt
module10/video2/src/: cpp2py.cpp
module2/PR/: sketch.ino  wokwi-project.txt
module2/video8/src/: main.cpp
module3/PR/: diagram.json
module3/PR/src/: main.cpp
module3/video2/: package-lock.json
module3/video2/src/: main.cpp
module4/PR/: platformio.ini
module4/PR/src/: main.cpp
module5/PR/: CMakeLists.txt
module5/PR/src/: car.cpp  car.h  lorry.cpp  lorry.h  main.cpp
module5/video5/src/: main.cpp  matrix.cpp  matrix.h
module6/PR/src/: main.cpp  matrix.cpp  matrix.h
module6/video3/: CMakeLists.txt
module6/video3/src/: main.cpp  matrix.cpp  matrix.h
module7/PR/exe/: CMakeLists.txt
module7/PR/exe/src/: main.cpp
module7/PR/lib/matrixlib/: matrix.h
module7/video1/: CMakeLists.txt
module7/video1/matrixlib/: matrix.cpp
module7/video2/: CMakeLists.txt
module7/video2/matrixlib/: export.h  main.cpp
module7/video2/matrixlib/c/: c_api.cpp  c_api.h
module7/video2/matrixlib/test/: test-matrix-shared.cpp  test-matrix-static.cpp
module8/PR/snake/: CMakeLists.txt
module8/PR/snake/src/: Snake.cpp
module8/materials/: CMakeLists.txt  colors.txt  main.cpp  timer.cpp  timer.h
module8/video1/: CMakeLists.txt  main.cpp
module8/video3/: CMakeLists.txt
module8/video3/src/: book.cpp  book.h  main.cpp
module8/video5/: CMakeLists.txt
module8/video5/src/: main.cpp  window.cpp  window.h
module9/materials/: main.cpp
